--- a/src/app/profesor/home/home.component.scss
+++ b/src/app/profesor/home/home.component.scss
@@ -201,24 +201,25 @@
   }
   
   .card__icon_e {
-    grid-row: 2/3;
+    grid-row: 3/4;
     font-size: 25px;
   }
   
   .card__title_e {
-    grid-row: 3/4;
+    grid-column: 1/6;
+    grid-row: 4/5;
     font-weight: 400;
     color: #ffffff;
   }
   .card__description_e {
-    grid-row:auto;
+    grid-row:auto / span 2;
     grid-column: 1/8;
     font-weight: 300;
     color: #ffffff;
   }
   .card__apply_e {
     grid-row: 4/4;
-    grid-column: 7/8;
+    grid-column: 6/7;
     align-self: center;
   }
   
